@@ -38,6 +38,7 @@ version ?.??.?? (????-??-??):
   - enhancement: added barcode in second title line of userpanel transfer form [chilan]
   - improvement: warn about event user assignment overlaps - phpui.event_overlap_warning
     configuration variable controls if it is enabled ('false' by default) [chilan]
+  - enhancement: allow to print transfer forms from customer balance box [chilan]
 
 version 1.11.23 (2018-03-21):
 
